--- a/index.html
+++ b/index.html
@@ -1,1 +1,8 @@
-<img src="http://i.imgur.com/5DDgg7G.jpg" alt="Filadelfia" />
+<img src="http://i.imgur.com/5DDgg7G.jpg" class="center" alt="Filadelfia" />
+<style>
+  img.center {
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+  }
+</style>
