Create a real index.html, add title

--- a/index.html
+++ b/index.html
@@ -1,8 +1,19 @@
-<img src="http://i.imgur.com/5DDgg7G.jpg" class="center" alt="Filadelfia" />
-<style>
-  img.center {
-    display: block;
-    margin-left: auto;
-    margin-right: auto;
-  }
-</style>
+<!DOCTYPE html>
+<html lang="es">
+  <head>
+    <title>Filadelfia</title>
+    <meta charset="utf-8">
+    <style>
+      img.center {
+        display: block;
+        margin-left: auto;
+        margin-right: auto;
+      }
+      </style>
+  </head>
+  <body>
+    
+    <img src="http://i.imgur.com/5DDgg7G.jpg" class="center" alt="Filadelfia" />
+  
+  </body>
+</html>
