--- a/index.html
+++ b/index.html
@@ -16,5 +16,14 @@
     <img src="http://i.imgur.com/5DDgg7G.jpg" class="center" alt="Filadelfia" />
   <a href="https://twitter.com/Filadelfia38" class="twitter-follow-button" data-show-count="false" data-size="large">Follow @Filadelfia38</a>
 <script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0],p=/^http:/.test(d.location)?'http':'https';if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src=p+'://platform.twitter.com/widgets.js';fjs.parentNode.insertBefore(js,fjs);}}(document, 'script', 'twitter-wjs');</script>
+  
+  <div id="fb-root"></div>
+<script>(function(d, s, id) {
+  var js, fjs = d.getElementsByTagName(s)[0];
+  if (d.getElementById(id)) return;
+  js = d.createElement(s); js.id = id;
+  js.src = "//connect.facebook.net/es_LA/sdk.js#xfbml=1&version=v2.3";
+  fjs.parentNode.insertBefore(js, fjs);
+}(document, 'script', 'facebook-jssdk'));</script> <div class="fb-page" data-href="https://www.facebook.com/Filadelfia38" data-hide-cover="true" data-show-facepile="true" data-show-posts="false"><div class="fb-xfbml-parse-ignore"><blockquote cite="https://www.facebook.com/Filadelfia38"><a href="https://www.facebook.com/Filadelfia38">Grupo Filadelfia</a></blockquote></div></div>
   </body>
 </html>
