--- a/index.html
+++ b/index.html
@@ -3,7 +3,12 @@
   <head>
     <title>Filadelfia38</title>
     <meta charset="utf-8">
-    <style>
+    <style> 
+    
+    social_media
+{
+    text-align:center
+}
       img.center {
         display: block;
         margin-left: auto;
@@ -14,7 +19,7 @@
   <body>
     
     <img src="http://i.imgur.com/5DDgg7G.jpg" class="center" alt="Filadelfia" />
-  <a href="https://twitter.com/Filadelfia38" class="twitter-follow-button" style="text-align:center;" data-show-count="false" data-size="large">Follow @Filadelfia38</a>
+  <div class="social-media> <a href="https://twitter.com/Filadelfia38" class="twitter-follow-button" style="text-align:center;" data-show-count="false" data-size="large">Follow @Filadelfia38</a>
 <script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0],p=/^http:/.test(d.location)?'http':'https';if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src=p+'://platform.twitter.com/widgets.js';fjs.parentNode.insertBefore(js,fjs);}}(document, 'script', 'twitter-wjs');</script>
   
   <div id="fb-root"></div>
@@ -24,6 +29,6 @@
   js = d.createElement(s); js.id = id;
   js.src = "//connect.facebook.net/es_LA/sdk.js#xfbml=1&version=v2.3";
   fjs.parentNode.insertBefore(js, fjs);
-}(document, 'script', 'facebook-jssdk'));</script> <div class="fb-page" data-href="https://www.facebook.com/Filadelfia38" data-hide-cover="true" data-show-facepile="true" data-show-posts="false"><div class="fb-xfbml-parse-ignore"><blockquote cite="https://www.facebook.com/Filadelfia38"><a href="https://www.facebook.com/Filadelfia38">Grupo Filadelfia</a></blockquote></div></div>
+}(document, 'script', 'facebook-jssdk'));</script> <div class="fb-page" data-href="https://www.facebook.com/Filadelfia38" data-hide-cover="true" data-show-facepile="true" data-show-posts="false"><div class="fb-xfbml-parse-ignore"><blockquote cite="https://www.facebook.com/Filadelfia38"><a href="https://www.facebook.com/Filadelfia38">Grupo Filadelfia</a></blockquote></div></div></div>
   </body>
 </html>
