--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="utf-8">
     <style> 
     
-    .social_media {text-align:center}
+    .social_media <div class="social_media" style="display:inline-block;vertical-align:top"> {text-align:center}
       img.center {
         display: block;
         margin-left: auto;
