--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     
     <img src="http://i.imgur.com/5DDgg7G.jpg" class="center" alt="Filadelfia" />
   
- <div class="social_media"> <a href="https://twitter.com/Filadelfia38" class="twitter-follow-button" data-show-count="false" data-size="large">Follow @Filadelfia38</a>
+ <div class="social_media"> <div class="social_media" style="display:inline-block;vertical-align:top"> <a href="https://twitter.com/Filadelfia38" class="twitter-follow-button" data-show-count="false" data-size="large">Follow @Filadelfia38</a>
 <script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0],p=/^http:/.test(d.location)?'http':'https';if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src=p+'://platform.twitter.com/widgets.js';fjs.parentNode.insertBefore(js,fjs);}}(document, 'script', 'twitter-wjs');</script>
   
   <div id="fb-root"></div>
