--- a/index.html
+++ b/index.html
@@ -39,18 +39,13 @@ div .fb_reset {
     </div> 
 
         <div id="fb-root"></div>
-        <script>(function(d, s, id) {
-            var js, fjs = d.getElementsByTagName(s)[0];
-            if (d.getElementById(id)) return;
-            js = d.createElement(s); js.id = id;
-            js.src = "//connect.facebook.net/es_LA/sdk.js#xfbml=1&version=v2.3";
-            fjs.parentNode.insertBefore(js, fjs);
-            }(document, 'script', 'facebook-jssdk'));
-        </script>
-        <div class="fb-page" data-href="https://www.facebook.com/Filadelfia38" data-hide-cover="true" data-show-facepile="true" data-show-posts="false">
-            <div class="fb-xfbml-parse-ignore">
-                <blockquote cite="https://www.facebook.com/Filadelfia38"><a href="https://www.facebook.com/Filadelfia38">Grupo Filadelfia</a></blockquote>
-            </div>
+<script>(function(d, s, id) {
+  var js, fjs = d.getElementsByTagName(s)[0];
+  if (d.getElementById(id)) return;
+  js = d.createElement(s); js.id = id;
+  js.src = "//connect.facebook.net/es_LA/sdk.js#xfbml=1&version=v2.3";
+  fjs.parentNode.insertBefore(js, fjs);
+}(document, 'script', 'facebook-jssdk'));</script><div class="fb-like" data-href="https://facebook.com/Filadelfia38" data-layout="standard" data-action="like" data-show-faces="true" data-share="false"></div>
         </div>
 </div>
   </body>
