--- a/index.html
+++ b/index.html
@@ -34,9 +34,10 @@ div .fb_reset {
   
 <div class="social_media"> 
     <div class="twitter">
-        <a href="https://twitter.com/Filadelfia38" class="twitter-follow-button" data-show-count="false" data-size="large">Follow @Filadelfia38</a>
-        <script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0],p=/^http:/.test(d.location)?'http':'https';if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src=p+'://platform.twitter.com/widgets.js';fjs.parentNode.insertBefore(js,fjs);}}(document, 'script', 'twitter-wjs');</script>
-    </div> 
+         
+    
+    <a href="https://twitter.com/Filadelfia38" class="twitter-follow-button" data-show-count="false">Follow @Filadelfia38</a>
+<script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0],p=/^http:/.test(d.location)?'http':'https';if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src=p+'://platform.twitter.com/widgets.js';fjs.parentNode.insertBefore(js,fjs);}}(document, 'script', 'twitter-wjs');</script>
 
         <div id="fb-root"></div>
 <script>(function(d, s, id) {
@@ -45,7 +46,7 @@ div .fb_reset {
   js = d.createElement(s); js.id = id;
   js.src = "//connect.facebook.net/es_LA/sdk.js#xfbml=1&version=v2.3";
   fjs.parentNode.insertBefore(js, fjs);
-}(document, 'script', 'facebook-jssdk'));</script><div class="fb-like" data-href="https://facebook.com/Filadelfia38" data-layout="standard" data-action="like" data-show-faces="true" data-share="false"></div>
+}(document, 'script', 'facebook-jssdk'));</script><div class="fb-like" data-href="https://facebook.com/Filadelfia38" data-layout="standard" data-action="like" data-show-faces="false" data-share="false"></div>
         </div>
 </div>
   </body>
