--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@ div .fb_reset {
   js = d.createElement(s); js.id = id;
   js.src = "//connect.facebook.net/es_LA/sdk.js#xfbml=1&version=v2.3";
   fjs.parentNode.insertBefore(js, fjs);
-}(document, 'script', 'facebook-jssdk'));</script><div class="fb-like" data-href="https://facebook.com/Filadelfia38" data-layout="standard" data-action="like" data-show-faces="false" data-share="false"></div>
+}(document, 'script', 'facebook-jssdk'));</script><div class="fb-like" data-href="https://facebook.com/Filadelfia38" data-layout="button" data-action="like" data-show-faces="false" data-share="false"></div>
         </div>
 </div>
   </body>
