--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@ div .fb_reset {
 <a href="http://instagram.com/filadelfia38?ref=badge" class="ig-b- ig-b-v-24"><img src="//badges.instagram.com/static/images/ig-badge-view-24.png" alt="Instagram" /></a>
 
 <script type="text/javascript" src="https://apis.google.com/js/plusone.js"></script>
-<g:plus href="https://plus.google.com/{117322957073156356537}"></g:plus> <div class="g-plus" data-href="https://plus.google.com/{117322957073156356537}"></div>
+<g:plus href="https://plus.google.com/117322957073156356537"></g:plus> <div class="g-plus" data-href="https://plus.google.com/117322957073156356537"></div>
         </div>
 </div>
   </body>
