--- a/index.html
+++ b/index.html
@@ -56,9 +56,12 @@ div .fb_reset {
 .ig-b-v-24 { background-image: url(//badges.instagram.com/static/images/ig-badge-view-sprite-24@2x.png); background-size: 160px 178px; } }</style>
 <a href="http://instagram.com/filadelfia38?ref=badge" class="ig-b- ig-b-v-24"><img src="//badges.instagram.com/static/images/ig-badge-view-24.png" alt="Instagram" /></a>
 
-<script type="text/javascript" src="https://apis.google.com/js/plusone.js"></script>
-<g:plus href="https://plus.google.com/117322957073156356537"></g:plus> <div class="g-plus" data-href="https://plus.google.com/117322957073156356537"></div>
-        </div>
+<!-- Coloca este código en el lugar donde quieras que se muestre la insignia. -->
+<a href="https://plus.google.com/117322957073156356537?prsrc=3"
+   rel="publisher" target="_top" style="text-decoration:none;display:inline-block;color:#333;text-align:center; font:13px/16px arial,sans-serif;white-space:nowrap;">
+<span style="display:inline-block;font-weight:bold;vertical-align:top;margin-right:5px; margin-top:0px;">Síguenos</span><span style="display:inline-block;vertical-align:top;margin-right:13px; margin-top:0px;">en</span>
+<img src="//ssl.gstatic.com/images/icons/gplus-16.png" alt="Google+" style="border:0;width:16px;height:16px;"/>
+</a>     </div>
 </div>
   </body>
 </html> 
