--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@ div .fb_reset {
   </head>
   <body>
     
-<img src="http://i.imgur.com/pUBwBE0.jpg" class="center" alt="Filadelfia" />
+<img src="http://i.imgur.com/PXeTaXS.jpg?1" class="center" alt="Filadelfia" />
   
 <div class="social_media"> 
     <div class="twitter">
