--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@ div .fb_reset {
   </head>
   <body>
     
-<img src="http://i.imgur.com/yVt03Sy.jpg?1" class="center" alt="Filadelfia" />
+<img src="http://i.imgur.com/sqp69h8.jpg?1" class="center" alt="Filadelfia" />
   
 <div class="social_media"> 
     <div class="twitter">
