--- a/index.html
+++ b/index.html
@@ -31,8 +31,9 @@ div .fb_reset {
   </head>
   <body>
     
-<iframe width="560" height="315" src="https://www.youtube.com/embed/K9C0Agyvmm8" frameborder="0" allowfullscreen></iframe>
-  
+
+<img src="http://i.imgur.com/cv0BVrr.png" class="center" alt="Filadelfia" />
+  <iframe width="560" height="315" src="https://www.youtube.com/embed/K9C0Agyvmm8" frameborder="0" allowfullscreen></iframe>
 <div class="social_media"> 
     <div class="twitter">
          
