--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@ div .fb_reset {
     
 
 <img src="http://i.imgur.com/cv0BVrr.png" class="center" alt="Filadelfia" />
-<iframe class="center" width="560" height="315" src="https://www.youtube.com/embed/hO4wSb63_2E" frameborder="0" allowfullscreen></iframe>
+<center><iframe class="center" width="560" height="315" src="https://www.youtube.com/embed/hO4wSb63_2E" frameborder="0" allowfullscreen></iframe></center>
 <div class="social_media"> 
     <div class="twitter">
          
