--- a/index.html
+++ b/index.html
@@ -67,7 +67,8 @@ div .fb_reset {
 </div>
   </body>
 </html> 
-<center><a href="http://apple.co/1HMJHck" target="itunes_store" style="display:inline-block;overflow:hidden;background:url(http://linkmaker.itunes.apple.com/htmlResources/assets/en_us//images/web/linkmaker/badge_itunes-lrg.png) no-repeat;width:110px;height:40px;@media only screen{background-image:url(http://linkmaker.itunes.apple.com/htmlResources/assets/en_us//images/web/linkmaker/badge_itunes-lrg.svg);}"></a></center>								
+<center><a href="http://amzn.to/1HAoEg7" target="amazon_store" style="display:inline-block;overflow:hidden;background:url(https://bit.ly/1pySSEP) no-repeat;width:101px;height:39px;@media only screen"></a>								
+								<a href="http://apple.co/1HMJHck" target="itunes_store" style="display:inline-block;overflow:hidden;background:url(http://linkmaker.itunes.apple.com/htmlResources/assets/en_us//images/web/linkmaker/badge_itunes-lrg.png) no-repeat;width:110px;height:40px;@media only screen{background-image:url(http://linkmaker.itunes.apple.com/htmlResources/assets/en_us//images/web/linkmaker/badge_itunes-lrg.svg);}"></a></center>								
 								
 <center><iframe class="center" width="700" height="450" scrolling="no" frameborder="no" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/users/161170841&amp;color=ff5500&amp;auto_play=false&amp;hide_related=false&amp;show_comments=true&amp;show_user=true&amp;show_reposts=false"></iframe></center>
 <center><iframe class="center" src="https://widgets.itunes.apple.com/widget.html?c=us&brc=FFFFFF&blc=FFFFFF&trc=FFFFFF&tlc=FFFFFF&d=&t=&m=music&e=album&w=250&h=300&ids=1019587718&wt=discovery&partnerId=&affiliate_id=&at=10l4B8&ct=media_player_1019587718" frameborder=0 style="overflow-x:hidden;overflow-y:hidden;width:250px;height: 300px;border:0px"></iframe></center>
