--- a/index.html
+++ b/index.html
@@ -49,7 +49,9 @@ div .fb_reset {
   js.src = "//connect.facebook.net/es_LA/sdk.js#xfbml=1&version=v2.3";
   fjs.parentNode.insertBefore(js, fjs);
 }(document, 'script', 'facebook-jssdk'));</script><div class="fb-like" data-href="https://facebook.com/Filadelfia38" data-layout="button" data-action="like" data-show-faces="false" data-share="false"></div>
-|
+|<script src="https://apis.google.com/js/platform.js"></script>
+
+<div class="g-ytsubscribe" data-channelid="UC6l9sOpb8z1aYkLtpFDLp7A" data-layout="default" data-count="hidden"></div>
 <style>.ig-b- { display: inline-block; }
 .ig-b- img { visibility: hidden; }
 .ig-b-:hover { background-position: 0 -60px; } .ig-b-:active { background-position: 0 -120px; }
