--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@ div .fb_reset {
 </a>     </div>
 </div>
   </body>
-</html> 
+</html> <hr>
 <center><a href="http://amzn.to/1HAoEg7" target="amazon_store" style="display:inline-block;overflow:hidden;background:url(https://bit.ly/1pySSEP) no-repeat;width:101px;height:39px;@media only screen"></a>								
 								<a href="http://t.co/y8ImwPpR7Z" target="deezer" style="display:inline-block;overflow:hidden;background:url(http://johndohlsten.se/onewebstatic/1555ff3ed9-_uohooseu5wq-_.png) no-repeat;width:101px;height:39px;@media only screen"></a><a href="http://apple.co/1HMJHck" target="itunes_store" style="display:inline-block;overflow:hidden;background:url(http://linkmaker.itunes.apple.com/htmlResources/assets/en_us//images/web/linkmaker/badge_itunes-lrg.png) no-repeat;width:110px;height:40px;@media only screen{background-image:url(http://linkmaker.itunes.apple.com/htmlResources/assets/en_us//images/web/linkmaker/badge_itunes-lrg.svg);}"></a><a href="http://spoti.fi/1IbwQXD" target="spotify_store" style="display:inline-block;overflow:hidden;background:url(https://bit.ly/1pyTGto) no-repeat;width:101px;height:39px;@media only screen"></a>	<a href="http://t.co/INreSS4tVU" target="google_store" style="display:inline-block;overflow:hidden;background:url(https://s3.amazonaws.com/catapult.images/web/button_googleplay.png) no-repeat;width:101px;height:39px;@media only screen"></a>							
 								</center>								
